Fixed some spacing for images on bigger screens

--- a/_assets/stylesheets/site.css
+++ b/_assets/stylesheets/site.css
@@ -41,14 +41,14 @@ div .index-image img {
     position: absolute;
     left: 0; }
 
-@media only screen and (min-width: 600px) {
+@media only screen and (min-width: 720px) {
     .index-small {
         position: relative;
         width: 16.67%;
         padding-bottom: 16.67%; }
 }
 
-@media only screen and (min-width: 361px) and (max-width: 599px) {
+@media only screen and (min-width: 361px) and (max-width: 719px) {
     .index-small {
         position: relative;
         width: 25%;
